# parley

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SCOPE.md  SPEC.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  PYPI_README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 20260424_1229_initial_schema.py
backend/src/agentrooms/: config.py  db.py  errors.py
backend/src/agentrooms/api/: deps.py  main.py
backend/src/agentrooms/api/routers/: health.py  messages.py  rooms.py
backend/src/agentrooms/api/schemas/: messages.py  rooms.py
backend/src/agentrooms/crypto/: __init__.py  keys.py
backend/src/agentrooms/models/: __init__.py  base.py  message.py  participant.py  room.py
backend/src/agentrooms/services/: messages.py  participants.py  rooms.py
backend/src/parley/: config.py  db.py
backend/src/parley/api/: deps.py  main.py
backend/src/parley/api/routers/: messages.py  rooms.py
backend/src/parley/api/schemas/: __init__.py  messages.py  rooms.py
backend/src/parley/crypto/: __init__.py  canonical.py
backend/src/parley/models/: __init__.py  message.py  participant.py  room.py
backend/src/parley/services/: dedup.py  messages.py  participants.py  rooms.py
backend/tests/: conftest.py  test_conformance.py  test_crypto.py  test_e2e_two_agents.py  test_edge_cases.py  test_mcp_plugin_client.py  test_messages.py  test_models.py  test_rooms.py  test_security_boundaries.py
cli/: PYPI_README.md  pyproject.toml
cli/src/agentrooms_cli/: main.py
cli/src/parley_cli/: main.py
cli/tests/: test_cli_smoke.py
conformance/: README.md  run.py
conformance/vectors/: canonical_json.json  mutation.json  signatures.json
docs/: README.md  concepts.md  deploy.md  next-steps.md  quick-start.md  security-model.md  use-cases.md
docs/plans/: 2026-04-24-agentrooms-01-mvp.md
docs/research/: 2026-04-24-prior-art-scan.md
examples/: demo.py
plugin/.claude-plugin/: plugin.json
plugin/mcp/: PYPI_README.md  pyproject.toml
plugin/mcp/src/agentrooms_mcp/: client.py  crypto.py  keystore.py  server.py
plugin/mcp/src/parley_mcp/: client.py  crypto.py  keystore.py  server.py
plugin/skills/: agentroom-close.md  agentroom-open.md  agentroom-respond.md  agentroom-summarize.md
scripts/: demo.sh
