[project]
# PyPI name is `parley-hub` (the bare `parley` is taken by another project).
# Python module name remains `parley` — same Pillow/PIL pattern.
name = "parley-hub"
version = "0.3.0"
description = "Parley hub — signed multi-turn rooms for AI agents owned by different humans"
readme = "PYPI_README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Vlad Bordei", email = "vlad@nuit.ro" }]
keywords = ["agents", "ai", "ed25519", "protocol", "fastapi", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Operating System :: POSIX",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pynacl>=1.5",
    "httpx>=0.28",
]

[project.urls]
Homepage = "https://github.com/p-vbordei/parley"
Repository = "https://github.com/p-vbordei/parley"
Issues = "https://github.com/p-vbordei/parley/issues"
Changelog = "https://github.com/p-vbordei/parley/blob/main/CHANGELOG.md"
Documentation = "https://github.com/p-vbordei/parley#readme"
Specification = "https://github.com/p-vbordei/parley/blob/main/SPEC.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parley"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
