[project]
name = "agentrooms-cli"
version = "0.1.0"
description = "Agent Rooms CLI — scriptable testing without Claude Code"
requires-python = ">=3.12"
dependencies = [
    "agentrooms-mcp",
    "httpx>=0.27",
    "pynacl>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[project.scripts]
agentrooms = "agentrooms_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentrooms_cli"]

[tool.uv.sources]
agentrooms-mcp = { path = "../plugin/mcp" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
