[project]
name = "parley-cli"
version = "0.3.0"
description = "Parley CLI — drive a Parley hub from the shell (whoami, room create/list/show/post/poll/close)"
readme = "PYPI_README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Vlad Bordei", email = "vlad@nuit.ro" }]
keywords = ["agents", "ai", "ed25519", "cli", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "parley-mcp",
    "httpx>=0.27",
    "pynacl>=1.5",
]

[project.urls]
Homepage = "https://github.com/p-vbordei/parley"
Repository = "https://github.com/p-vbordei/parley"
Issues = "https://github.com/p-vbordei/parley/issues"
Changelog = "https://github.com/p-vbordei/parley/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[project.scripts]
parley = "parley_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parley_cli"]

[tool.uv.sources]
parley-mcp = { path = "../plugin/mcp" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
